Correct paw position for different font sizes
This change makes sure the dog paw icon won't
overlap with the text when the user has configured
their font-size to be greater than the default of 16px
(on Web) or text scaling grater than 100% (on Mobile).

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -197,24 +197,11 @@
 }
 
 .dogPaw {
-  position: absolute;
-  transform: rotateZ(15deg);
   color: var(--color-brand-black);
-
-  @media only screen and (max-width: 350px) {
-    display: none;
-  }
-  @media only screen and (max-width: 460px) {
-    left: 250px;
-  }
-  @media only screen and (max-width: 800px) {
-    top: 75px;
-    left: 280px;
-  }
-  @media only screen and (min-width: 800px) {
-    top: 100px;
-    left: 272px;
-  }
+  transform: rotateZ(15deg);
+  position: absolute;
+  left: calc(280px + (1rem - 16px) * 5);
+  top: 100px;
 }
 
 .groomingHeader {
